--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "heroicons": "^2.2.0",
     "next": "15.3.1",
     "react": "^19.0.0",
